// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import/Export Read sample and ensure results match sample.txt {"addTrieBreaksToImproveDiffs": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,51,48,15,46,30,68,73,8,90,31
]
B
/* B */
i
/* Bi */
g Apple$9
N
/* N */
e
/* Ne */
w York$8
a
/* a */
p#6<2
b
/* b */
i
/* bi */
g a#16<5
f
/* f */
u
/* fu */
n journey$7wal@3<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@2<2$4ste@4<ing$3$3vialit@5<2$4wly$$2yfuller$st$4ness$4$3
lessne@6<2$4ous@7<3ridde@2<2er$$i@1<3od@8<3stic@3<4$3
l
/* l */
i
/* li */
fted$r$2i@1<s$$3
o
/* lo */
ng w@10<6
t
/* t */
a
/* ta */
lke@9<i@1<s$$4
w
/* w */
a
/* wa */
lk#98<4
"
`;

exports[`Import/Export Read sample and ensure results match sample.txt {} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,51,48,15,46,30,68,73,8,90,31
]
B
/* B */
i
/* Bi */
g Apple$9
N
/* N */
e
/* Ne */
w York$8
a
/* a */
p#6<2
b
/* b */
i
/* bi */
g a#16<5
f
/* f */
u
/* fu */
n journey$7wal@3<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@2<2$4ste@4<ing$3$3vialit@5<2$4wly$$2yfuller$st$4ness$4$3
lessne@6<2$4ous@7<3ridde@2<2er$$i@1<3od@8<3stic@3<4$3
l
/* l */
i
/* li */
fted$r$2i@1<s$$3
o
/* lo */
ng w@10<6
t
/* t */
a
/* ta */
lke@9<i@1<s$$4
w
/* w */
a
/* wa */
lk#98<4
"
`;

exports[`Import/Export Read sample and ensure results match sample2.txt {"addTrieBreaksToImproveDiffs": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,124,121,35,119,103,141,142,146,28,163
]
\\#
/* \\# */
 
/* \\#  */
comment\\, not stored$9<9<3
\\$$
B
/* B */
i
/* Bi */
g Apple$9
N
/* N */
e
/* Ne */
w York$8
\\[
/* \\[ */
b
/* \\[b */
races\\]$8
\\\\\\
/* \\\\\\ */
 
/* \\\\\\  */
single backslash$9<8
\\\\\\
/* \\\\\\\\\\\\ */
 double backsla#58<9<6\\\\\\ triple backsl#74<9<8
a
/* a */
p#26<2
b
/* b */
i
/* bi */
g a#89<5
f
/* f */
u
/* fu */
n journey$7wal@3<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@2<2$4ste@4<ing$3$3vialit@5<2$4wly$$2yfuller$st$4ness$4$3
lessne@6<2$4ous@8<3ridde@2<2er$$i@1<3od@9<3stic@3<4$3
l
/* l */
i
/* li */
fted$r$2i@1<s$$3
o
/* lo */
ng w#104<6
r
/* r */
e
/* re */
\\-w#33<4
s
/* s */
p
/* sp */
ecial characters \\\`\\~\\!\\@\\#\\$\\%\\^\\&\\*\\(\\)\\_\\-\\+\\=\\[\\]\\\\\\\\{\\}\\|\\;\\'\\:\\"\\,\\.\\/\\<\\>\\?$9<9<9<9<9<6
t
/* t */
a
/* ta */
lke@10<i@1<s$$4
w
/* w */
a
/* wa */
lk#224<3
o
/* wo */
rk\\'@7<i@1<s$$4
"
`;

exports[`Import/Export Read sample and ensure results match sample2.txt {} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,124,121,35,119,103,141,142,146,28,163
]
\\#
/* \\# */
 
/* \\#  */
comment\\, not stored$9<9<3
\\$$
B
/* B */
i
/* Bi */
g Apple$9
N
/* N */
e
/* Ne */
w York$8
\\[
/* \\[ */
b
/* \\[b */
races\\]$8
\\\\\\
/* \\\\\\ */
 
/* \\\\\\  */
single backslash$9<8
\\\\\\
/* \\\\\\\\\\\\ */
 double backsla#58<9<6\\\\\\ triple backsl#74<9<8
a
/* a */
p#26<2
b
/* b */
i
/* bi */
g a#89<5
f
/* f */
u
/* fu */
n journey$7wal@3<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@2<2$4ste@4<ing$3$3vialit@5<2$4wly$$2yfuller$st$4ness$4$3
lessne@6<2$4ous@8<3ridde@2<2er$$i@1<3od@9<3stic@3<4$3
l
/* l */
i
/* li */
fted$r$2i@1<s$$3
o
/* lo */
ng w#104<6
r
/* r */
e
/* re */
\\-w#33<4
s
/* s */
p
/* sp */
ecial characters \\\`\\~\\!\\@\\#\\$\\%\\^\\&\\*\\(\\)\\_\\-\\+\\=\\[\\]\\\\\\\\{\\}\\|\\;\\'\\:\\"\\,\\.\\/\\<\\>\\?$9<9<9<9<9<6
t
/* t */
a
/* ta */
lke@10<i@1<s$$4
w
/* w */
a
/* wa */
lk#224<3
o
/* wo */
rk\\'@7<i@1<s$$4
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,57,59,104,55,62,63,86,87,102
]
B
/* B */
i
/* Bi */
g Apple$8
r
/* Br */
aces\\: \\{\\}\\[\\]\\(\\)$9<5
N
/* N */
e
/* Ne */
w York$7
u
/* Nu */
mbers \\0\\1\\2\\3\\4\\5\\6\\7\\8\\9$9<9
a
/* a */
\\/
/* a\\/ */
b$c$2
p#6<r
/* ar */
row \\<$7
b
/* b */
i
/* bi */
g a#5<4
u
/* bu */
rned$r$2ing$3s$$4
c
/* c */
h
/* ch */
alk@2<3u@5<3
e
/* e */
o
/* eo */
l \\\\n$3w \\$$4
s
/* es */
cape \\\\\\$8
f
/* f */
u
/* fu */
n journey$7wal@1<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4ness$4$3
lessn#121<$4ou#126<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
l
/* l */
i
/* li */
ft@2<3
o
/* lo */
ng w@9<6
r
/* r */
e
/* re */
f \\#$5
s
/* s */
l
/* sl */
ash \\/$7
t@6<
w
/* w */
a@7<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,57,59,104,55,62,63,86,87,102
]
B
/* B */
i
/* Bi */
g Apple$8
r
/* Br */
aces\\: \\{\\}\\[\\]\\(\\)$9<5
N
/* N */
e
/* Ne */
w York$7
u
/* Nu */
mbers \\0\\1\\2\\3\\4\\5\\6\\7\\8\\9$9<9
a
/* a */
\\/
/* a\\/ */
b$c$2
p#6<r
/* ar */
row \\<$7
b
/* b */
i
/* bi */
g a#5<4
u
/* bu */
rned$r$2ing$3s$$4
c
/* c */
h
/* ch */
alk@2<3u@5<3
e
/* e */
o
/* eo */
l \\\\n$3w \\$$4
s
/* es */
cape \\\\\\$8
f
/* f */
u
/* fu */
n journey$7wal@1<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4ness$4$3
lessn#121<$4ou#126<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
l
/* l */
i
/* li */
ft@2<3
o
/* lo */
ng w@9<6
r
/* r */
e
/* re */
f \\#$5
s
/* s */
l
/* sl */
ash \\/$7
t@6<
w
/* w */
a@7<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,57,59,104,55,62,63,86,87,102
]
B
/* B */
i
/* Bi */
g Apple$8
r
/* Br */
aces\\: \\{\\}\\[\\]\\(\\)$9<5
N
/* N */
e
/* Ne */
w York$7
u
/* Nu */
mbers \\0\\1\\2\\3\\4\\5\\6\\7\\8\\9$9<9
a
/* a */
\\/
/* a\\/ */
b$c$2
p#6<r
/* ar */
row \\<$7
b
/* b */
i
/* bi */
g a#5<4
u
/* bu */
rned$r$2ing$3s$$4
c
/* c */
h
/* ch */
alk@2<3u@5<3
e
/* e */
o
/* eo */
l \\\\n$3w \\$$4
s
/* es */
cape \\\\\\$8
f
/* f */
u
/* fu */
n journey$7wal@1<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4ness$4$3
lessn#121<$4ou#126<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
l
/* l */
i
/* li */
ft@2<3
o
/* lo */
ng w@9<6
r
/* r */
e
/* re */
f \\#$5
s
/* s */
l
/* sl */
ash \\/$7
t@6<
w
/* w */
a@7<2
"
`;

exports[`Import/Export serialize DAWG 10 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,57,59,104,55,62,63,86,87,102
]
B
/* B */
i
/* Bi */
g Apple$8
r
/* Br */
aces\\: \\{\\}\\[\\]\\(\\)$9<5
N
/* N */
e
/* Ne */
w York$7
u
/* Nu */
mbers \\0\\1\\2\\3\\4\\5\\6\\7\\8\\9$9<9
a
/* a */
\\/
/* a\\/ */
b$c$2
p#6<r
/* ar */
row \\<$7
b
/* b */
i
/* bi */
g a#5<4
u
/* bu */
rned$r$2ing$3s$$4
c
/* c */
h
/* ch */
alk@2<3u@5<3
e
/* e */
o
/* eo */
l \\\\n$3w \\$$4
s
/* es */
cape \\\\\\$8
f
/* f */
u
/* fu */
n journey$7wal@1<7
j
/* j */
o
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4ness$4$3
lessn#121<$4ou#126<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
l
/* l */
i
/* li */
ft@2<3
o
/* lo */
ng w@9<6
r
/* r */
e
/* re */
f \\#$5
s
/* s */
l
/* sl */
ash \\/$7
t@6<
w
/* w */
a@7<2
"
`;
